--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "expo-haptics": "~15.0.7",
     "expo-image": "~3.0.10",
     "expo-linking": "~8.0.8",
+    "expo-location": "~19.0.7",
     "expo-maps": "~0.12.8",
     "expo-router": "~6.0.14",
     "expo-splash-screen": "~31.0.10",
@@ -31,6 +32,7 @@
     "expo-web-browser": "~15.0.9",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-location": "^3.3.4",
     "react-native": "0.81.5",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-maps": "1.20.1",
@@ -38,7 +40,8 @@
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-web": "~0.21.0",
-    "react-native-worklets": "0.5.1"
+    "react-native-worklets": "0.5.1",
+    "react-router-dom": "^7.9.5"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
