--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
     "expo": "~54.0.23",
-    "expo-app-loading": "^2.1.1",
+    "expo-app-loading": "^1.1.2",
     "expo-constants": "~18.0.10",
     "expo-font": "~14.0.9",
     "expo-haptics": "~15.0.7",
@@ -36,12 +36,13 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-location": "^3.3.4",
-    "react-native": "0.81.5",
+    "react-native": "^0.75.5",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-maps": "1.20.1",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
+    "react-native-swipe-list-view": "^3.2.9",
     "react-native-vector-icons": "^10.3.0",
     "react-native-web": "~0.21.0",
     "react-native-worklets": "0.5.1",
