--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@demark-pro/react-booking-calendar": "^4.0.3",
     "@expo/vector-icons": "^15.0.3",
     "@react-native-async-storage/async-storage": "2.2.0",
-    "@react-native-picker/picker": "^2.11.4",
+    "@react-native-picker/picker": "2.11.1",
     "@react-navigation/bottom-tabs": "^7.4.0",
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
@@ -36,7 +36,7 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-location": "^3.3.4",
-    "react-native": "^0.75.5",
+    "react-native": "0.81.5",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-maps": "1.20.1",
     "react-native-reanimated": "~4.1.1",
